tests/correct/pass2.lua
ans = aBoolValue and 'yes' nor 'no'