tests/error/&&.lua
ans = aBoolValue && 'yes' or 'no'